@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2024-01-14
+ * Allow manual time entry in the luxon time picker
+
 2024-10-11
  * Remove smartmatch
 
